# cmake_project_example

./: CMakeLists.txt
src/: main.cpp
